* Tue Nov 22 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 3.0.0-0
- Update version to reflect SIMP6 dependencies
- Minor cleanup

* Mon Nov 21 2016 Chris Tessmer <chris.tessmer@onyxpoint.com> - 2.1.2-0
- Minor cleanup

* Wed Nov 16 2016 Liz Nemsick <lnemsick.simp@gmail.com> - 2.1.2-0
- Updated iptables dependency version

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 2.1.0-5
- Added compliance function support

* Tue Nov 10 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 2.1.0-4
- migration to simplib and simpcat (lib/ only)

* Mon Apr 06 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.1.0-3
- Updated the default log_type to 'SYSLOG authpriv'

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.1.0-2
- Changed puppet-server requirement to puppet

* Sun Jun 22 2014 Kendall Moore <kmoore@keywcorp.com> - 2.1.0-1
- Removed MD5 file checksums for FIPS compliance.

* Thu Jun 19 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.1.0-1
- Ensure that 'lfrom' in xinetd.conf.erb is not converted to an Array
  explicitly.

* Fri Jan 3 2014 Nick Markowski <nmarkowski@keywcorp.com> - 2.1.0-0
- Updated module for puppet3/hiera compatibility, and optimized code for lint tests,
  and puppet-rspec.

* Tue Oct 08 2013 Nick Markowski <nmarkowski@keywcorp.com> - 2.0.0-7
- Updated template to reference instance variables with @

* Fri Nov 30 2012 Maintenance
2.0.0-6
- Created a Cucumber test to ensure that xinetd installs correctly when adding
  include xinetd in the puppet server manifest.

* Thu Jun 07 2012 Maintenance
2.0.0-5
- Ensure that Arrays in templates are flattened.
- Call facts as instance variables.
- Moved mit-tests to /usr/share/simp...
- Converted internal nets2cidr code to use the 'common' function.
- Updated pp files to better meet Puppet's recommended style guide.

* Fri Apr 06 2012 Maintenance
2.0.0-4
- Templated xinetd.conf.

* Fri Mar 02 2012 Maintenance
2.0.0-3
- Improved test stubs.

* Mon Dec 26 2011 Maintenance
2.0.0-2