@@ -3,7 +3,5 @@ Requires: pupmod-puppetlabs-stdlib < 5.0.0-0
 Requires: pupmod-puppetlabs-stdlib >= 4.9.0-0
 Requires: pupmod-simp-iptables < 6.0.0-0
 Requires: pupmod-simp-iptables >= 5.0.0-0
-Requires: pupmod-simp-rsync >= 5.0.0-0
-Requires: pupmod-simp-rsync < 6.0.0-0
 Requires: pupmod-simp-tcpwrappers >= 5.0.0-0
 Requires: pupmod-simp-tcpwrappers < 6.0.0-0
