@@ -1,6 +1,6 @@
 {
   "name": "simp-xinetd",
-  "version": "3.0.0",
+  "version": "3.0.1",
   "author": "SIMP Team",
   "summary": "Manages xinetd.",
   "license": "Apache-2.0",
@@ -15,10 +15,6 @@
     {
       "name": "puppetlabs/stdlib",
       "version_requirement": ">= 4.9.0 < 5.0.0"
-    },
-    {
-      "name": "simp/rsync",
-      "version_requirement": ">= 5.0.0 < 6.0.0"
     },
     {
       "name": "simp/iptables",
